tests/snapshots/snapshot_ir_translations__capability_negotiation__negotiation_with_emulated_report.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&report"
---
{
  "compatible": true,
  "native_count": 1,
  "emulated_count": 1,
  "unsupported_count": 0,
  "summary": "1 native, 1 emulated, 0 unsupported — fully compatible",
  "details": [
    [
      "Streaming",
      {
        "level": "native"
      }
    ],
    [
      "ExtendedThinking",
      {
        "level": "emulated",
        "method": "adapter"
      }
    ]
  ]
}
